force-app/main/default/objects/MUSW__Review_Template__c/MUSW__Review_Template__c.object-meta.xml
<CustomObject>
    <label>Review Template</label>
    <nameField>
        <label>Review Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>