force-app/main/default/objects/MUSW__Review_Template__c/fields/AVO_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Effective_Start_Date__c</fullName>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>