force-app/main/default/objects/MUSW__Review_Template__c/fields/AVO_Owner_Queue_User__c.field-meta.xml
<CustomField>
    <fullName>AVO_Owner_Queue_User__c</fullName>
    <label>Owner (Queue/User)</label>
    <type>TextArea</type>
</CustomField>