force-app/main/default/objects/MUSW__Review_Template__c/fields/AVO_Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Type__c</fullName>
    <label>Permit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Water Withdrawal Application</fullName>
            </value>
            <value>
                <fullName>Application to Modify</fullName>
            </value>
            <value>
                <fullName>Transfer an Agricultural Water Withdrawal Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>