force-app/main/default/objects/MUSW__Review_Template__c/fields/Master_Review_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Review_List_Name__c</fullName>
    <label>Master Review List Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>