force-app/main/default/objects/MUSW__Review_Template__c/fields/MUSW__Milestone_Template__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Milestone_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Template</label>
    <referenceTo>MUSW__Milestone_Template__c</referenceTo>
    <relationshipLabel>Review Templates</relationshipLabel>
    <relationshipName>Review_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>