force-app/main/default/objects/MUSW__Review_Template__c/fields/MUSW__Permit_Types__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Permit_Types__c</fullName>
    <label>Permit Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Permit_Types</valueSetName>
    </valueSet>
</CustomField>