force-app/main/default/objects/MUSW__Review_Template__c/fields/MUSW__Queue_Assignment__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Queue_Assignment__c</fullName>
    <label>Queue Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Queue_Assignments</valueSetName>
    </valueSet>
</CustomField>