force-app/main/default/objects/MUSW__Review_Template__c/fields/MUSW__Required_Skills__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Required_Skills__c</fullName>
    <label>Required Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Skills</valueSetName>
    </valueSet>
</CustomField>