force-app/main/default/objects/MUSW__Review_Template__c/fields/MUSW__Review_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Review</fullName>
            </value>
            <value>
                <fullName>Plan Review</fullName>
            </value>
            <value>
                <fullName>Electrical Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>