force-app/main/default/objects/MUSW__Review_Template__c/recordTypes/MUSW__Application_Review.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Application_Review</fullName>
    <active>true</active>
    <label>Application Review</label>
</RecordType>