force-app/main/default/objects/MUSW__Review_Template__c/recordTypes/MUSW__License_Review.recordType-meta.xml
<RecordType>
    <fullName>MUSW__License_Review</fullName>
    <active>true</active>
    <label>License Review</label>
</RecordType>