force-app/main/default/objects/MUSW__Review_Template__c/recordTypes/MUSW__Permit_Review.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Permit_Review</fullName>
    <active>true</active>
    <label>Permit Review</label>
</RecordType>