force-app/main/default/objects/MUSW__Review_Template__c/recordTypes/MUSW__Project_Review.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Project_Review</fullName>
    <active>true</active>
    <label>Project Review</label>
</RecordType>