force-app/main/default/objects/MUSW__Review_Template__c/listViews/AVO_Ready_for_Approval_Review_Review_Template.listView-meta.xml
<ListView>
    <fullName>AVO_Ready_for_Approval_Review_Review_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>Ready for Approval Review</label>
    <queue>AVO_Ready_for_Approval_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>